--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
+    "bootstrap": "^5.3.3",
     "materialize-css": "^1.0.0-rc.2",
     "react": "^18.0.0",
+    "react-bootstrap": "^2.10.6",
     "react-dom": "^18.0.0",
+    "react-router-dom": "^7.0.1",
     "react-scripts": "5.0.0",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
