--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "npm run build && node ./dist/config/server.js",
+    "start": "npm run build && node ./dist/app.js",
     "dev": "ts-node -r tsconfig-paths/register ./src/config/server.ts",
     "build": "tsc",
     "clean": "rm -rf dist"
